--- a/stylesheets/pokemon.css
+++ b/stylesheets/pokemon.css
@@ -40,7 +40,7 @@ body {
   max-width: 100%;
   height: 100px;
 }
-#LoadMore {
+#load-more {
   padding: 20px;
   border: 1px solid #945BE9;
   text-align: center;
