--- a/stylesheets/pokemon.css
+++ b/stylesheets/pokemon.css
@@ -45,8 +45,8 @@ body {
   border: 1px solid #945BE9;
   text-align: center;
   margin-top: 22px;
-  margin-left: 1%; 
-  margin-right: 11%%;  
+  margin-left: 1%;
+  margin-right: 11%;
   padding: 10px 20px 10px 20px;  
   height: 20px;
   width: 86%;
